Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#583 closed bug (fixed)

Incorrect time for "Pacific/Auckland" timezone, and time-setting bugs

Reported by: andy.elvey@… Owned by: axeld
Priority: low Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Hi -

I'm running Haiku on QEmu (Haiku kernel version 12MAY2006). I'm running QEmu on Linux - Fedora Core 5. AMD Athlon64.

The bug : Haiku shows the incorrect time for the "Pacific/Auckland"

timezone. It shows as two hours earlier than it should be. There are also inconsistencies in the time shown in the "Time and Date" widget, and the time shown on the menu (just under the "leaf").

I've got screenshots which should help in fixing this bug.

The process I went through (to set the time) is as follows -

1 - I went into "Preferences/Time". The first screenshot (called

"Haiku_12MAY2006_time_before_any_changes.png" shows the situation before I have made any changes.

2 - I changed the timezone to "Pacific/Auckland" (by selecting "Pacific"

from the dropdown list, then clicking "Auckland"). However, this did not change the *place* shown in "Current time zone" - it still showed "Paris". The relevant screenshot here is - "Haiku_12MAY2006_timezone_changed_to_Auckland.png".

The "Time In: " *did* change - it said "Auckland", and the time changed to 8:39AM (two hours before the correct time, 10:39AM, which is shown in the extreme top-right of the screenshot. Note that the time on the menu (just under the "leaf") has not changed yet, so it looks like just setting the timezone doesn't change it.

3 - I then corrected the time (as shown in the screenshot called -

"Haiku_12MAY2006_corrected_time_but_shows_as_Paris.png" . As can be seen, the time on the menu is now correct, and the time next

to "Current time zone" is correct. But the name of the current time-zone is still "Paris", and "Time in Auckland" is showing as 8:44PM. Hmmmm ..... :-).

So, there you go. I'm very happy to test this - I ABSOLUTELY LOVE Haiku! Keep up the great work - looking forward to hearing back from you soon -

  • Andy

Oh, btw - if you can let me know how to attach screenshots to bug-reports, I'll do that. It'll make fixing this bug easier. Thanks!

Attachments (3)

Haiku_12MAY2006_time_before_any_changes.png (44.1 KB ) - added by andy.elvey@… 19 years ago.
The time-setting widget before I made any changes to time or timezone.
Haiku_12MAY2006_timezone_changed_to_Auckland.png (44.2 KB ) - added by andy.elvey@… 19 years ago.
Time-setting widget after I changed the timezone to Pacific/Auckland
Haiku_12MAY2006_corrected_time_but_shows_as_Paris.png (43.8 KB ) - added by andy.elvey@… 19 years ago.
Corrected the time, but timezone shows as Paris. (Heh-wish I was there ... :-)) )

Download all attachments as: .zip

Change History (10)

comment:1 by umccullough@…, 19 years ago

To attach screenshots - use the "Create a New Attachment" link below the Summary text box on the http://www.haiku-os.org/bugzilla/show_bug.cgi?id=583 page.

by andy.elvey@…, 19 years ago

The time-setting widget before I made any changes to time or timezone.

by andy.elvey@…, 19 years ago

Time-setting widget after I changed the timezone to Pacific/Auckland

by andy.elvey@…, 19 years ago

Corrected the time, but timezone shows as Paris. (Heh-wish I was there ... :-)) )

comment:2 by mmlr, 19 years ago

Are you sure that this is not caused by QEMU? By default QEMU uses UTC as its timebase. With "-localtime" this should change to your local time.

comment:3 by korli, 19 years ago

Status: newclosed

comment:4 by korli, 19 years ago

Resolution: fixed

comment:5 by korli, 19 years ago

I applied two fixes, available in revision 17441:

  • set_timezone implementation wasn't finished: it now sets the timezone in the

kernel and settings. Deskbar should now updates the time correctly when setting the timezone.

  • rtc_system_to_hw kernel function was somehow reversed for the timezone offset.

Andy, be sure to use the "Set" button in Time preferences to actually change to timezone in Deskbar.

comment:6 by andy.elvey@…, 19 years ago

As the person who logged this bug, I can confirm that it is now fixed!

( and very quickly too - within 24 hours or even less! :-) )

*Very many thanks* to the devs who were involved with this, and who fixed

it!

comment:7 by korli, 19 years ago

Andy, remember to change the state to confirm the fix, thanks.

Note: See TracTickets for help on using tickets.