actually set timezone in the kernel, and in the settings should help on bug #583, and even fix it minor change in localtime

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17441 a95241bf-73f2-0310-859d-f6bbb57e9c96